--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
 
 .encabezado{
     padding: 3em 0;
-    background: #FFFFFF;
+    background: linear-gradient( #6d97d6, white);
 }
 
 .encabezado h1{
@@ -32,7 +32,7 @@ div.texto{
     vertical-align: top;
     border: 2px solid #0A3871;
     border-radius: 10px;
-    margin-left: 40px;
+    margin-left: 30px;
 }
 
 .encripta{
@@ -157,5 +157,3 @@ footer{
         width: 100%;
     }
 }
-
-
