--- a/style.css
+++ b/style.css
@@ -122,8 +122,7 @@ footer{
 
 .copyright{
     font-size: 17px;
-    margin-top: 0;
-    margin: 40px;
+    margin: 0px 0px 40px;
     color: #FFFFFF;
     font-weight: normal;
     animation-duration: 3s;
